@@ -1,12 +1,11 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
 Version: 1.0-8
-Date: 2021-02-02
+Date: 2021-03-01
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
 Depends: variables (>= 0.0-30), R (>= 3.2.0)
 Imports: stats, polynom, Matrix, orthopolynom, methods
-Suggests: MatrixModels
 URL: http://ctm.R-forge.R-project.org
 License: GPL-2
